--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,30 +1,31 @@
 <!doctype html>
-<html ng-app="app" lang="en" xmlns:th="http://www.thymeleaf.org">
+<html ng-app="app">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.0/angular.min.js"></script>
-    <script src="showAll.js"></script>
+    <script src="index.js"></script>
 </head>
+
 <body>
-<div class="container" ng-controller="indexCntroller">
-    <h3>Product list</h3>
+<div class="container" ng-controller="indexController">
+    <h3>Список продуктов</h3>
     <table class="table table-hover">
         <tr>
             <td>ID</td>
-            <td>Название товара</td>
-            <td>Удалить</td>
+            <td>Наименование продукта</td>
+            <td>Действие</td>
         </tr>
         <tbody>
         <tr ng-repeat="p in ProductsList">
             <td>{{p.id}}</td>
             <td>{{p.title}}</td>
             <td>
-                <button type="button" class="btn btn-danger" ng-click="deleteProduct(p.id)">Удалить</button>
+                <button class="btn btn-danger" ng-click="deleteProduct(p.id)">Исключить</button>
             </td>
         </tr>
         </tbody>
